2009-01-23  Ankit Jain  <radical@gmail.com>

	* src/Application.cs (QuitMainLoop): Rename to ..
	(Quit): .. this. Move to here from ..
	(OnQuit): .. here.
	* src/TargetWindow.cs (WindowDeleted): Call Application.Quit

2009-01-22  Ankit Jain  <radical@gmail.com>

	* src/WindowsPlatformService.cs (ShowMessage):
	(AskYesNoQuestion): Use the @icon also.

2009-01-22  Ankit Jain  <radical@gmail.com>

	* src/RequestHandler.cs (HandlePayload): 'relativePath' can be null.

2009-01-22  Ankit Jain  <radical@gmail.com>

	* src/GiverService.cs (.ctor): Set authentication to Anonymous instead
	of None. None actually translates to forbid (http 403)!

2009-01-19  Ankit Jain  <radical@gmail.com>

	* src/Application.cs (ShowAppNotification): Remove.
	* src/PlatformService.cs (ShowMessage): New.
	(AskYesNoQuestion): New.
	* src/GnomePlatformService.cs: Implement the new methods with
	notify-sharp.
	* src/WindowsPlatformService.cs: Implement the new methods with
	Gtk.Dialog, for now.

	* src/RequestHandler.cs:
	* src/SendingHandler.cs: Use the new PlatformService api instead of
	using notify-sharp directly.

2009-01-19  Ankit Jain  <radical@gmail.com>

	* src/Logger.cs: Use SpecialFolder.Personal instead of $(HOME),
	more cross-platform.

2009-01-19  Ankit Jain  <radical@gmail.com>

	* configure.ac: Add a '--enable-windows' option
	* src/Makefile.am: Update for ENABLE_WIN.

2009-01-19  Ankit Jain  <radical@gmail.com>

	* src/PlatformService (PlaySoundFile): New.
	(GetString): New.
	* src/GnomePlatformService.cs:
	* src/WindowsPlatformService.cs: Implement the new methods.

	* src/Application.cs:
	* src/RequestHandler.cs:
	* src/SendingHandler.cs:
	* src/TargetService.cs:
	Replace Mono.Unix.Catalog.GetString calls with
	PlatformService.GetString, and same for Gnome.Sound.Play

	* src/PreferencesDialog.cs:
	* src/TargetWindow.cs:
	* src/UriList.cs: Remove unused 'using Mono.Unix*'

2009-01-19  Ankit Jain  <radical@gmail.com>
